<resources>
    <string name="app_name">Photos</string>
    <string name="cycle_left">&lt;</string>
    <string name="cycle_right">&gt;</string>
    <string name="add_tag">Add Tag</string>
    <string name="move_photo">Move Photo</string>
    <string name="caption_placeholder">Caption Placeholder</string>
    <string name="albums">Albums</string>
    <string name="back">Back</string>
    <string name="add_new_photo">Add New Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="create_album">New Album</string>
    <string name="rename_album">Rename</string>
    <string name="delete_album">X</string>
    <string name="album_name_placeholder">AlbumName</string>
    <string name="scrollable_tag_list">Scrollable Tag List</string>
    <string name="tag_format_hint">(Format is [tagType]=value where tagType equals Location or People)</string>
    <string name="type_tag_here">Type Tag Here</string>
    <string name="filter_photos_hint">Filter photos using tag value pairs. If only searching with one tag, please use the top box.</string>
    <string name="switch_album">Album View</string>
    <string name="tag1_suggestion">eg. People=Bob</string>
    <string name="tag2_suggestion">eg. Location=school</string>
    <string-array name="logical_operators">
        <item>and</item>
        <item>or</item>
    </string-array>

</resources>