<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/albums"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAlbumButton"
        android:layout_width="146dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="172dp"
        android:onClick="OnCreateAlbumClick"
        android:text="@string/create_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumList"

        android:layout_width="385dp"
        android:layout_height="376dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAlbumButton"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/FilterHint"
        android:layout_width="354dp"
        android:layout_height="41dp"
        android:layout_marginTop="128dp"
        android:text="@string/filter_photos_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switchButton"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="24dp"
        android:text="@string/switch_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/tag1Search"
        android:layout_width="224dp"
        android:layout_height="39dp"
        android:hint="@string/tag1_suggestion"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/FilterHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Spinner
        android:id="@+id/operatorMenu"
        android:layout_width="98dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toTopOf="@+id/FilterHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <AutoCompleteTextView
        android:id="@+id/tag2Search"
        android:layout_width="224dp"
        android:layout_height="39dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/tag2_suggestion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>