<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardElevation="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/albumListItemName"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:gravity="center_vertical"
                android:text="@string/album_name_placeholder"
                android:textSize="25sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <Button
                android:id="@+id/renameAlbumButton"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:text="@string/rename_album"
                android:textSize="11sp"
                android:padding="0dp" />

            <ImageView
                android:id="@+id/deleteAlbum"
                android:contentDescription="@string/delete_album"
                android:layout_width="15dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_delete_24"
                android:layout_weight="2"
                android:padding="0dp"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>