<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoViewActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/photoViewActivity"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="395dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="192dp"
                android:layout_height="156dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="113dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <Button
                android:id="@+id/addTagButton"
                android:layout_width="109dp"
                android:layout_height="50dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_tag"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.0"
                android:onClick="openPopup" />

            <Button
                android:id="@+id/cycleLeftButton"
                android:layout_width="73dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="25dp"
                android:text="@string/cycle_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/cycleRightButton"
                android:layout_width="76dp"
                android:layout_height="48dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="125dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="162dp"
                android:text="@string/cycle_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/movePhotoButton"
                android:layout_width="112dp"
                android:layout_height="51dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:text="@string/move_photo"
                android:onClick="showAlbumsMenu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/photoCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="102dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="102dp"
                android:text="@string/caption_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="77dp"
                android:text="@string/back"
                app:layout_constraintBottom_toTopOf="@+id/cycleLeftButton"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagRecyclerView"
                android:layout_width="380dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movePhotoButton"
                app:layout_constraintVertical_bias="0.807" />

            <TextView
                android:id="@+id/scrollableTagsTextView"
                android:layout_width="125dp"
                android:layout_height="24dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/scrollable_tag_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addTagButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>